--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+
 .App {
   text-align: center;
 }
+
+
 
 .App-logo {
   height: 40vmin;
@@ -27,6 +30,49 @@
 .App-link {
   color: #61dafb;
 }
+
+.button {
+  width: 100%;
+  height:45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 700;
+}
+.button:hover{
+  background: rgba(152, 197, 248, 0.78) ;
+transition: 0.25s;
+}
+
+
+  .back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+    transition: opacity 0.3s ease;
+  }
+
+  .back-to-top:hover {
+    background-color: #0056b3;
+  }
 
 @keyframes App-logo-spin {
   from {
